--- a/index.html
+++ b/index.html
@@ -1,18 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+    <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>ITBootcamp</title>
 </head>
+
 <body>
-   
-      
+
+
     </div>
     <div class="ring" style="display: block;">Loading
         <span></span>
-      </div>
+    </div>
     <div class="contener">
         <div class="modalWindow" style="display: none; ">
             <img src="#" alt="#" class="modalWindow_img">
@@ -32,7 +38,8 @@
                 <div class="modalWindow_text_gender">Gender:</div>
                 <div class="modalWindow_text_genderRes"></div>
             </div>
-    </div>
-    <script src="./main.js"></script>
+        </div>
+        <script src="./main.js"></script>
 </body>
+
 </html>
