--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 
 <head>
-    <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="https://dj-rom.github.io/ITB/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://dj-rom.github.io/ITB/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="https://dj-rom.github.io/ITB/favicon/favicon-16x16.png">
+    <link rel="manifest" href="https://dj-rom.github.io/ITB/site.webmanifest">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://dj-rom.github.io/ITB/style.css">
     <title>ITBootcamp</title>
 </head>
 
@@ -39,7 +39,7 @@
                 <div class="modalWindow_text_genderRes"></div>
             </div>
         </div>
-        <script src="./main.js"></script>
+        <script src="https://dj-rom.github.io/ITB/main.js"></script>
 </body>
 
 </html>
