--- a/index.html
+++ b/index.html
@@ -2,13 +2,12 @@
 <html lang="en">
 
 <head>
-    <link rel="apple-touch-icon" sizes="180x180" href="https://dj-rom.github.io/ITB/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="https://dj-rom.github.io/ITB/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="https://dj-rom.github.io/ITB/favicon/favicon-16x16.png">
-    <link rel="manifest" href="https://dj-rom.github.io/ITB/site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://dj-rom.github.io/ITB/style.css">
+    <link rel="stylesheet" href="style.css">
     <title>ITBootcamp</title>
 </head>
 
@@ -20,7 +19,7 @@
         <span></span>
     </div>
     <div class="contener">
-        <div class="modalWindow" style="display: none; ">
+        <div class="modalWindow" style="display: none;">
             <img src="#" alt="#" class="modalWindow_img">
             <div class="modalWindow_text">
                 <div class="modalWindow_text_name">Name:</div>
@@ -39,7 +38,7 @@
                 <div class="modalWindow_text_genderRes"></div>
             </div>
         </div>
-        <script src="https://dj-rom.github.io/ITB/main.js"></script>
+        <script src="./main.js"></script>
 </body>
 
 </html>
