--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 
 <head>
-    <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="https://github.com/Dj-Rom/ITB/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://github.com/Dj-Rom/ITB/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="https://github.com/Dj-Rom/ITB/favicon/favicon-16x16.png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://github.com/Dj-Rom/ITB/style.css">
     <title>ITBootcamp</title>
 </head>
 
@@ -28,6 +28,9 @@
                 <div class="modalWindow_text_statusRes"></div>
                 <div class="modalWindow_text_species">Species:</div>
                 <div class="modalWindow_text_speciesRes"></div>
+                <div class="modalWindow_text_episode">First episode:</div>
+                <div class="modalWindow_text_episodeRes"></div>
+
             </div>
             <div class="modalWindow_text2">
                 <div class="modalWindow_text_origin">Origin:</div>
@@ -38,7 +41,7 @@
                 <div class="modalWindow_text_genderRes"></div>
             </div>
         </div>
-        <script src="./main.js"></script>
+        <script src="https://github.com/Dj-Rom/ITB/main.js"></script>
 </body>
 
 </html>
