--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 
      
         <div class="modalWindow" style="display: none;">
+            <p class=".XClosed">&#x2715</p>
             <img src="#" alt="#" class="modalWindow_img">
             <div class="modalWindow_text">
                 <div class="modalWindow_text_name">Name:</div>
