--- a/index.html
+++ b/index.html
@@ -36,22 +36,22 @@
             <p class="XClosed">&#x2715</p>
             <img src="#" alt="#" class="modalWindow_img">
             <div class="modalWindow_text">
-                <div class="modalWindow_text_name">Name:</div>
+                <div class="modalWindow_text_name" style="font-weight:900" >Name:</div>
                 <div class="modalWindow_text_nameRes"></div>
-                <div class="modalWindow_text_status">Status:</div>
+                <div class="modalWindow_text_status" style="font-weight:900" >Status:</div>
                 <div class="modalWindow_text_statusRes"></div>
-                <div class="modalWindow_text_species">Species:</div>
+                <div class="modalWindow_text_species" style="font-weight:900" >Species:</div>
                 <div class="modalWindow_text_speciesRes"></div>
-                <div class="modalWindow_text_episode">First episode:</div>
+                <div class="modalWindow_text_episode" style="font-weight:900" >First episode:</div>
                 <div class="modalWindow_text_episodeRes"></div>
 
             </div>
             <div class="modalWindow_text2">
-                <div class="modalWindow_text_origin">Origin:</div>
+                <div class="modalWindow_text_origin" style="font-weight:900" >Origin:</div>
                 <div class="modalWindow_text_originRes"></div>
-                <div class="modalWindow_text_location">Location:</div>
+                <div class="modalWindow_text_location" style="font-weight:900" >Location:</div>
                 <div class="modalWindow_text_locationRes"></div>
-                <div class="modalWindow_text_gender">Gender:</div>
+                <div class="modalWindow_text_gender" style="font-weight:900" >Gender:</div>
                 <div class="modalWindow_text_genderRes"></div>
             </div>
         </div>
