--- a/index.html
+++ b/index.html
@@ -6,14 +6,12 @@
     <link rel="icon" type="image/png" sizes="32x32" href="https://dj-rom.github.io/ITB/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="https://dj-rom.github.io/ITB/favicon/favicon-16x16.png">
     <meta charset="UTF-8">
+    <meta http-equiv="Cache-Control" content="public, max-age=3600"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://dj-rom.github.io/ITB/style.css">
     <title>ITBootcamp</title>
 </head>
-
 <body>
-
-
     </div>
     <div class="ring" style="display: block;">Loading
         <span></span>
@@ -30,9 +28,7 @@
 <div class="togg"> <h3 id="on_off">Pagination OFF</h3>
   <label for="toggle"></label>
 </div>
-
-     
-        <div class="modalWindow" style="display: none;">
+     <div class="modalWindow" style="display: none;">
             <p class="XClosed">&#x2715</p>
             <img src="#" alt="#" class="modalWindow_img">
             <div class="modalWindow_text">
