--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="https://dj-rom.github.io/ITB/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="https://dj-rom.github.io/ITB/favicon/favicon-16x16.png">
     <meta charset="UTF-8">
+    <meta name="description" content="Test project for IT bootcamp.">
     <meta http-equiv="Cache-Control" content="public, max-age=3600"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://dj-rom.github.io/ITB/style.css">
